// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Autocomplete > should match snapshot 1`] = `
<div
  class="inf-autocomplete"
>
  <button
    class="inf-select-button inf-text-field inf-text-field--br-regular inf-select-button--placeholder inf-autocomplete-button"
    tabindex="-1"
    type="button"
  >
    <span
      class="inf-select-button__arrow"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9L11.2929 14.2929C11.6262 14.6262 11.7929 14.7929 12 14.7929C12.2071 14.7929 12.3738 14.6262 12.7071 14.2929L18 9"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </span>
    Кнопка
    <input
      autocomplete="off"
      type="text"
      value=""
    />
  </button>
</div>
`;

exports[`Autocomplete Dropdown > should match snapshot > dropdown 1`] = `
<div
  class="inf-autocomplete-dropdown"
  name="floating"
  style="position: absolute; top: 100px; left: 100px;"
  title="title"
>
  Dropdown
</div>
`;

exports[`Autocomplete Option > should match snapshot 1`] = `
<button
  class="inf-menu-item"
  title="option"
>
  Option
</button>
`;

exports[`AutocompleteButton > should match snapshot > button 1`] = `
<button
  class="inf-select-button inf-text-field inf-text-field--br-regular inf-select-button--placeholder inf-autocomplete-button"
  tabindex="-1"
  title="title"
  type="button"
>
  <span
    class="inf-select-button__arrow"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 9L11.2929 14.2929C11.6262 14.6262 11.7929 14.7929 12 14.7929C12.2071 14.7929 12.3738 14.6262 12.7071 14.2929L18 9"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </span>
  Кнопка
  <input
    autocomplete="off"
    type="text"
    value=""
  />
</button>
`;
